--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.56.2",
     "axios": "^1.7.7",
+    "firebase": "^10.14.0",
     "prop-types": "^15.8.1",
     "query-string": "^9.1.0",
     "react": "^18.3.1",
